--- a/BookSystem-iPhoneCopy itouch点菜/BookSystem-iPhone/BookSystem-iPhone-Info.plist
+++ b/BookSystem-iPhoneCopy itouch点菜/BookSystem-iPhone/BookSystem-iPhone-Info.plist
@@ -25,7 +25,7 @@
 		</dict>
 	</dict>
 	<key>CFBundleIdentifier</key>
-	<string>com.ChoiceApp.BookSystem</string>
+	<string>com.UTHealth.BookSystem</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
